--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,1 +1,7 @@
-{}
+{
+  "spellcheck": true,
+  "useTab": false,
+  "newLinkFormat": "relative",
+  "attachmentFolderPath": "./",
+  "useMarkdownLinks": true
+}
